tests/invalid/bad_foreign_import_module.err_exp
bad_foreign_import_module.m:018: Error: a `:- pragma foreign_import_module'
bad_foreign_import_module.m:018:   declaration must have two arguments.
bad_foreign_import_module.m:022: In first argument of
bad_foreign_import_module.m:022:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:022:   declaration: error: invalid foreign language
bad_foreign_import_module.m:022:   `"InvalidForeignLang"'.
bad_foreign_import_module.m:027: In first argument of
bad_foreign_import_module.m:027:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:027:   declaration: error: invalid foreign language
bad_foreign_import_module.m:027:   `"InvalidForeignLang"'.
bad_foreign_import_module.m:028: Error: invalid module name `int(int)' in
bad_foreign_import_module.m:028:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:028:   declaration.
